# OldNewsBERT

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
modelling/tokenizer/bpe_tokenizer/: merges.txt  vocab.json
modelling/tokenizer/wordpiece_tokenizer/: config.json  vocab.txt
modules/: OldNews_fun.ipy
py-scripts/: 01_datastructure.py  02_tokenizer.py  03_apply_tokenizer.py  04_trainer.py  05_trainer.py  MLM.ipy
py-scripts/V3/: 01_toknizer.py  02_train.py  03_evaluate.py  05_eval_earlier.py  06_train_checkpoint.py  06_train_checkpoint_extend.py  07_train_checkpoint_extend.py  08_upload.py  evaluate.sh  evaluate_earlier.sh  trainer.sh
py-scripts/validation/: calculations.py  pick_samples.py  pseudo_ppl.py
runners/: trainer.sh  trainer_multi.sh
tokenizer/V3/: vocab.txt
tokenizer_dir/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
