[project]
name = "ccp-oldnewsbert-2024"
version = "0.1.0"
description = ""
authors = [
    {name = "CALDISS",email = "caldiss@adm.aau.dk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "dask[complete] (>=2025.2.0,<2026.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "transformers[torch] (>=4.49.0,<5.0.0)",
    "datasets (>=3.3.2,<4.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
